# QA-Framework

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  run_tests.sh
.github/workflows/: ci.yml
allure-results/: 0b8786a3-2398-407c-842d-9fa842517765-container.json  0cc7d8a6-c9d1-46cc-85e0-5594de2e4a68-result.json  82bd3419-27d3-4b0c-b714-78b034a6bfe7-result.json  b4b69ffd-bb98-410e-8c5b-a2abbfbcc4e7-container.json  c6840f24-908c-4b92-88ef-486778009658-container.json  cbfc8310-3e56-4fbb-84fb-764efd676dd1-attachment.txt  d5f54a9f-6005-4fec-b21f-9dbf97eae1a2-container.json  ed5cc295-b746-4bd9-a8c8-63f8f776b6f9-attachment.txt  fe46c7c7-f41d-4293-b586-c3f48ec51956-container.json
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: architecture.md  devops.md  installation.md  intro.md  samples.md  specialized-testing.md  user-guide.md
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  index.tsx
examples/: demo.py
examples/poc_saucedemo/data/: test_data.json
examples/poc_saucedemo/pages/: base_page.py  inventory_page.py  login_page.py
examples/poc_saucedemo/tests/: conftest.py  test_checkout.py
examples/saucedemo_robot/keywords/: SauceKeywords.py
examples/saucedemo_robot/tests/: login.robot
qa_framework/: cli.py
qa_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qa_framework/core/: config.py  exceptions.py  logger.py
qa_framework/core/a11y/: manager.py
qa_framework/core/api/: client.py  graphql.py
(+23 files in other folders)
